Version 1.0.16:
- From msmtp: Support for SYSCONFDIR/netrc (as a fallback for ~/.netrc) was
  added by Jim Pryor. Thanks!
- Added support for the GNOME Keyring. Originally written by Satoru SATOH for
  msmtp. Thanks a lot!

Version 1.0.15:
- Fix retrieval of mails that have no body.
- Do not allow comments in UIDLs files after the first non-comment line, to
  prevent UIDs starting with '#' from being treated as comments. Bug reported
  by Robert Siemer.

Version 1.0.14:
- Added the new tls_crl_file configuration command and the corresponding
  --tls-crl-file option.
- Added the new tls_min_dh_prime_bits configuration command and the
  corresponding --tls-min-dh-prime-bits option.
- Added the new tls_priorities configuration command and the corresponding
  --tls-priorities option.
- Gnulib upate to 2008-06-02. Use getpass-gnu instead of getpass module.
- Document how to use 'killsize 0' and 'keep on' to synchronize the UID list
  of the client to the UID list of the server. Suggested by Dimitrios Apostolou.
  Thanks!
- Use uidls_uidcmp() as a comparison function for qsort() and bsearch().
  Eliminate a duplicate function in pop3.c. Suggested by Dimitrios Apostolou.
  Thanks!
- Call fsync() after writing the UIDLS file. Suggested by Dimitrios Apostolou.
  Thanks!
- Faster UIDL implementation: Do not create a sorted list of received UIDs. Do
  a binary search for every received UID instead. Patch by Dimitrios Apostolou.
  Thanks!

Version 1.0.13:
- Buffer read operations also when TLS/SSL is active. Fixes performance problems
  with GnuTLS, reported by Dimitrios Apostolou.
- Fixed a potential problem with VPATH builds.
- Small optimization in insert_sorted() in pop3.c, by Dimitrios Apostolou.
- Updated gnulib to 2008-02-26. Imported havelib module.
- Use locale-independent c_toupper() instead of toupper() to avoid problems
  with the tr_TR.UTF-8 locale. Reported by S.Çağlar Onur for msmtp. Thanks!