@@ -1,4 +1,6 @@
 Version 1.0.16:
+- Unified handling of the Gnome and MacOS keyrings. Both are disabled by default
+  and must be enabled using --with-*-keyring options.
 - From msmtp: Support for SYSCONFDIR/netrc (as a fallback for ~/.netrc) was
   added by Jim Pryor. Thanks!
 - Added support for the GNOME Keyring. Originally written by Satoru SATOH for
